# webui-forge-maestro

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  release-please-config.json
assets/icons/: README.md  html-head-snippet.html  site.webmanifest
docs/superpowers/plans/: 2026-05-22-error-source-disambiguation.md  2026-05-22-forge-transient-retry.md
docs/superpowers/specs/: 2026-05-22-error-source-disambiguation-design.md  2026-05-22-forge-transient-retry-design.md
src/webui_forge_maestro/: __init__.py  __main__.py  config.py  config_test.py  errors.py  errors_test.py  forge.py  forge_test.py  models.py  output.py  output_test.py  server.py  server_test.py
