[project]
name = "webui-forge-maestro"
version = "1.0.0"
description = "Personal Python MCP server for Stable Diffusion WebUI Forge."
readme = "README.md"
authors = [{ name = "Odalrick", email = "odalrick@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
]

[project.scripts]
webui-forge-maestro = "webui_forge_maestro.__main__:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
python_files = ["*_test.py"]
testpaths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
